finalice proyecto de paises

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>hola</h1>
+<div class="row container mt-4">
+  <div class="col-3">
+   <app-sidebar></app-sidebar>
+  </div>
+
+  <div class="col">
+    <router-outlet></router-outlet>
+    <!-- para poder usar las rutas -->
+  </div>
+</div>
